<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="no.westerdals.shiale14.tictactoe.ResultActivity"
    android:background="@color/colorScreen">

    <ImageView
        android:src="@drawable/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewResults"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/resultImage"
        android:layout_marginLeft="100dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:id="@+id/listViewResults"
        android:layout_below="@+id/imageViewResults"
        android:layout_centerHorizontal="true"
        android:textFilterEnabled="false" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMainMenuText"
        android:id="@+id/btnMainMenu"
        android:layout_below="@+id/listViewResults"
        android:layout_alignLeft="@+id/imageViewResults"
        android:layout_alignStart="@+id/imageViewResults"
        android:background="@color/colorButton"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlayAgainText"
        android:id="@+id/btnPlayAgain"
        android:layout_below="@+id/listViewResults"
        android:layout_alignRight="@+id/imageViewResults"
        android:layout_alignEnd="@+id/imageViewResults"
        android:textColor="@color/colorText"
        android:background="@color/colorButton"
        android:layout_marginTop="15dp" />
</RelativeLayout>
